frontend/src/index.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

body {
  background-color: lightslategray;
  position: relative;
  top: 0;
  line-height: 1;
  font-family: Arial, Helvetica, sans-serif;
  height:100%;
  overflow-y: overlay;
}

ol, ul {
  list-style: none;
}

blockquote, q {
  quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
  content: "";
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

html {
  font-size: 100%;
  box-sizing: border-box;
}

*, *::before, *::after {
  box-sizing: inherit;
}

a, a:visited, a:hover {
  text-decoration: none;
  color: black;
}

h1 {
  font-size: 1.5rem;
}

.flex {
  display: flex;
}
.flex-row {
  flex-direction: row;
}
.flex-col {
  flex-direction: column;
}
.flex-jc-sb {
  justify-content: space-between;
}
.flex-jc-sa {
  justify-content: space-around;
}

.felx-jc-se {
  justify-content: space-evenly;
}

.flex-jc-c {
  justify-content: center;
}
.flex-ai-c {
  align-items: center;
}
.flex-ai-sa {
  align-items: space-around;
}

.felx-ai-se {
  align-items: space-evenly;
}

.grid {
  height: 100%;
  display: grid;
}

.grid-center {
  place-items: center;
}

.offscreen {
  position: absolute;
  left: 9999px;
  top: 9999px;
}

.hide {
  display: none;
}

.margin-top {
  margin-top: 1rem;
}

.margin-bottom {
  margin-bottom: 1rem;
}

.margin-right {
  margin-right: 1rem;
}

.margin-left {
  margin-left: 1rem;
}


.padding-top {
  padding-top: 1rem;
}

.padding-bottom {
  padding-bottom: 1rem;
}

.padding-right {
  padding-right: 1rem;
}

.padding-left {
  padding-left: 1rem;
}

